[gd_scene load_steps=2 format=3 uid="uid://qoe5p8v4rj8y"]

[ext_resource type="Script" uid="uid://dghvqocmukyko" path="res://Scripts/PauseMenu.gd" id="1_rrvs5"]

[node name="PauseMenu" type="CanvasLayer"]
script = ExtResource("1_rrvs5")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -172.0
offset_top = -99.0
offset_right = 172.0
offset_bottom = 99.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainMenu" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Resume" type="Button" parent="Panel/VBoxContainer/MainMenu"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
text = "Resume"

[node name="Reset" type="Button" parent="Panel/VBoxContainer/MainMenu"]
layout_mode = 2
size_flags_horizontal = 4
text = "Reset"

[node name="Settings" type="Button" parent="Panel/VBoxContainer/MainMenu"]
layout_mode = 2
size_flags_horizontal = 4
text = "Settings"

[node name="Quit" type="Button" parent="Panel/VBoxContainer/MainMenu"]
layout_mode = 2
size_flags_horizontal = 4
text = "Quit"

[node name="SettingsMenu" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Audio" type="HBoxContainer" parent="Panel/VBoxContainer/SettingsMenu"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/SettingsMenu/Audio"]
layout_mode = 2
text = "Master Volume:"

[node name="MasterVolume" type="HSlider" parent="Panel/VBoxContainer/SettingsMenu/Audio"]
layout_mode = 2
size_flags_horizontal = 3
scrollable = false

[node name="Back" type="Button" parent="Panel/VBoxContainer/SettingsMenu"]
layout_mode = 2
text = "Back"
